<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/example_title"/>

        <TextView
            android:id="@+id/details"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_details"/>

        <Button
            android:id="@+id/btn"
            android:textSize="12sp"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_margin="0dp"
            android:text="@string/example_btn"/>

</LinearLayout>
