<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConflictActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        app:layout_boxedEdges="all">
        <requestFocus/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            tools:context=".MainActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:textSize="13sp"
                    android:text="@string/exploit_prompt" />

                <ProgressBar
                    android:id="@+id/indeterminateBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/noShizuku"
                    android:visibility="visible"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button android:id="@+id/open_readme"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="13sp"
                        android:text="@string/README" />
                    <Button android:id="@+id/open_shizuku"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="13sp"
                        android:text="@string/Shizuku" />
                </LinearLayout>

                <Button android:id="@+id/btn_exploit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="13sp"
                    android:text="@string/exploit" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>